WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22054
DRT does not properly reset scrollbar arrows to default
https://bugs.webkit.org/show_bug.cgi?id=22054
Summary
DRT does not properly reset scrollbar arrows to default
Pierre-Olivier Latour
Reported
2008-11-03 14:00:54 PST
This code in DRT has actually no effect for the scrollbars drawn by WebKit as it uses HI toolbox which reads the default _only_ from kCFPreferencesAnyApplication / kCFPreferencesCurrentUser / kCFPreferencesAnyHost. [defaults setObject:@"DoubleMax" forKey:@"AppleScrollBarVariant"]; This makes pixel tests fail for test cases that display scrollbars if the user has chosen to place scroll arrows at top and bottom in system preferences.
Attachments
Tentative patch
(2.20 KB, patch)
2008-11-03 18:01 PST
,
Pierre-Olivier Latour
mitz: review+
Details
Formatted Diff
Diff
Second revision
(3.00 KB, patch)
2008-11-03 18:30 PST
,
Pierre-Olivier Latour
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pierre-Olivier Latour
Comment 1
2008-11-03 17:33:17 PST
Here's a test case that fails for instance: LayoutTests/svg/custom/invisible-text-after-scrolling.xhtml But actually, for this one, the scrollbars do not appear to be drawn by HIToolbox.
Pierre-Olivier Latour
Comment 2
2008-11-03 17:49:33 PST
> But actually, for this one, the scrollbars do not appear to be drawn by > HIToolbox.
Ignore this comment as it is incorrect: HIToolbox is indeed drawing these scrollbars!
Pierre-Olivier Latour
Comment 3
2008-11-03 18:01:44 PST
Created
attachment 24874
[details]
Tentative patch
mitz
Comment 4
2008-11-03 18:08:40 PST
Comment on
attachment 24874
[details]
Tentative patch
> + CFTypeRef oldValue = CFPreferencesCopyValue(CFSTR("AppleScrollBarVariant"), kCFPreferencesAnyApplication, kCFPreferencesCurrentUser, kCFPreferencesAnyHost);
You can use a RetainPtr for that and create create a local variable to hold CFSTR("AppleScrollBarVariant"). It would also be nice to move this closer to where you set the default in NSUserDefaults. r=me
Pierre-Olivier Latour
Comment 5
2008-11-03 18:30:01 PST
Created
attachment 24877
[details]
Second revision
mitz
Comment 6
2008-11-03 18:32:05 PST
Comment on
attachment 24877
[details]
Second revision r=me
mitz
Comment 7
2008-11-03 18:33:07 PST
Fixed in <
http://trac.webkit.org/changeset/38082
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug