2008-11-03  Pierre-Olivier Latour  <pol@apple.com>

Reviewed by Dan Bernstein.

        Fixed the override of the "AppleScrollBarVariant" system setting to also work with HIToolbox.

        https://bugs.webkit.org/show_bug.cgi?id=22054

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (setDefaultsToConsistentValuesForTesting):



git-svn-id: svn://svn.chromium.org/blink/trunk@38082 bbb929c8-8fbe-4397-9dbb-9b2b20218538